--- a/package.json
+++ b/package.json
@@ -14,7 +14,13 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@types/node": "^17.0.5",
+    "@types/react": "^17.0.38",
+    "autoprefixer": "^10.4.1",
     "eslint": "7.32.0",
-    "eslint-config-next": "11.1.0"
+    "eslint-config-next": "11.1.0",
+    "postcss": "^8.4.5",
+    "tailwindcss": "^3.0.8",
+    "typescript": "^4.5.4"
   }
 }
