--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
     "classnames": "^2.3.1",
+    "dayjs": "^1.10.7",
     "next": "12.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
