--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "dayjs": "^1.10.7",
     "next": "12.0.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-hotkeys-hook": "^3.4.4"
   },
   "devDependencies": {
     "@types/node": "^17.0.5",
