--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "svg": "svgr --typescript --no-svgo public/icons -d lib/icons"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
@@ -21,6 +22,7 @@
     "react-hotkeys-hook": "^3.4.4"
   },
   "devDependencies": {
+    "@svgr/cli": "^6.1.2",
     "@types/node": "^17.0.5",
     "@types/react": "^17.0.38",
     "autoprefixer": "^10.4.1",
