--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@fortawesome/react-fontawesome": "^0.1.16",
     "classnames": "^2.3.1",
     "dayjs": "^1.10.7",
+    "formik": "^2.2.9",
     "next": "12.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-hotkeys-hook": "^3.4.4"
+    "react-hotkeys-hook": "^3.4.4",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@svgr/cli": "^6.1.2",
