--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hotkeys-hook": "^3.4.4",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@svgr/cli": "^6.1.2",
