--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@svgr/cli": "^6.1.2",
     "@types/node": "^17.0.5",
     "@types/react": "^17.0.38",
+    "@types/uuid": "^8.3.4",
     "autoprefixer": "^10.4.1",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.0",
