--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "classnames": "^2.3.1",
     "dayjs": "^1.10.7",
     "formik": "^2.2.9",
+    "framer-motion": "^6.2.4",
     "next": "12.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
